[package]
name = "fast_string"
version = "0.1.0"
authors = ["MBkkt <MBkkt@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
rand = "0.8.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
